<resources>
    <string name="app_name">Lembrador</string>
    <string name="tarefas">Tarefas</string>
    <string name="titulo">Titulo</string>
    <string name="descri_ao">Descriçao</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="cancelar">Cancelar</string>
    <string name="passear_com_o_cachorro">Passear com o cachorro</string>
    <string name="editor">Edit</string>
    <string name="delete">Delete</string>

</resources>