<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/red_light"
        app:title="Criar Tarefa"
        app:titleMarginStart="70dp"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/ic_baseline_navigate_before_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:layout_marginStart="6dp"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_midle"
        app:layout_constraintGuide_percent=".5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iv_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/MyTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        android:hint="@string/titulo"
        app:helperTextEnabled="true"
        app:helperText="Insira um titulo"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/MyTextInputLayout"




            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_titulo"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_midle"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/data"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        app:helperTextEnabled="true"
        app:helperText="Insira uma data"
        style="@style/MyTextInputLayout"
        app:startIconTint="@color/red_light"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            style="@style/MyTextInputLayout"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hora"
        style="@style/MyTextInputLayout"
        app:layout_constraintStart_toEndOf="@id/guide_midle"
        app:layout_constraintTop_toTopOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="4dp"
        app:startIconDrawable="@drawable/ic_time"
        app:helperTextEnabled="true"
        app:helperText="Insira uma hora"
        app:startIconTint="@color/red_light"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"


            />





    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_criar_tarefa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        style="@style/Widget.MaterialComponents.Button"
        android:text="@string/criar_tarefa"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mb_criar_tarefa"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/cancelar"

        />







</androidx.constraintlayout.widget.ConstraintLayout>